--- a/myindex.html
+++ b/myindex.html
@@ -9,6 +9,20 @@
 
 <body>
     <div>hhh</div>
+    <div>
+        <div class="page-header">
+            <h1>title<small>subtext</small></h1>
+        </div>
+    </div>
+    <div>
+
+        <div class="progress">
+            <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="" aria-valuemin="" aria-valuemax="" style="width: ;">
+                <span class="sr-only">  % Complete</span>
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
